tests/baselines/reference/invalidNumberAssignments.errors.txt
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(3,5): error TS2322: Type 'number' is not assignable to type 'boolean'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(4,5): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(5,5): error TS2322: Type 'number' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(9,5): error TS2322: Type 'number' is not assignable to type 'C'.
  Property 'foo' is missing in type 'Number'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(12,5): error TS2322: Type 'number' is not assignable to type 'I'.
  Property 'bar' is missing in type 'Number'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(14,5): error TS2322: Type 'number' is not assignable to type '{ baz: string; }'.
  Property 'baz' is missing in type 'Number'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(15,5): error TS2322: Type 'number' is not assignable to type '{ 0: number; }'.
  Property '0' is missing in type 'Number'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(18,1): error TS2364: Invalid left-hand side of assignment expression.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(21,5): error TS2322: Type 'number' is not assignable to type 'T'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(23,1): error TS2364: Invalid left-hand side of assignment expression.


==== tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts (10 errors) ====
    var x = 1;
    
    var a: boolean = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'boolean'.
    var b: string = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    var c: void = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'void'.
    var d: typeof undefined = x;
    
    class C { foo: string; }
    var e: C = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'C'.
!!! error TS2322:   Property 'foo' is missing in type 'Number'.
    
    interface I { bar: string; }
    var f: I = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'I'.
!!! error TS2322:   Property 'bar' is missing in type 'Number'.
    
    var g: { baz: string } = 1;
        ~
!!! error TS2322: Type 'number' is not assignable to type '{ baz: string; }'.
!!! error TS2322:   Property 'baz' is missing in type 'Number'.
    var g2: { 0: number } = 1;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '{ 0: number; }'.
!!! error TS2322:   Property '0' is missing in type 'Number'.
    
    module M { export var x = 1; }
    M = x;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    function i<T>(a: T) {
        a = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'T'.
    }
    i = x;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.